<resources>
    <string name="app_name">VoiceIn</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_text">聯絡人</string>
    <string name="favorite_text">我的最愛</string>
    <string name="history_text">通話紀錄</string>
    <string name="group_text">群組</string>
    <string name="login_notice">歡迎您使用VoiceIn\n 請輸入您的號碼，開始使用</string>
    <string name="enter_phonenumber_hint">請輸入您的臺灣手機號碼(09開頭)</string>
    <string name="confirm">確認</string>
    <string name="verify_notice">驗證碼將在1分鐘內傳送到您的手機，請在下方輸入您的驗證碼</string>
    <string name="resend">重新傳送驗證碼</string>
    <string name="wait">請稍後</string>
    <string name="wait_notice">處理中請您稍待片刻</string>
    <string name="network_err">網路錯誤，請重試</string>
    <string name="user_auth_err">您的驗證碼有誤，請重試</string>
    <string name="profile_setting">設定個人資料</string>
    <string name="contact_setting">聯絡人資料</string>
    <string name="user_name_hint">請輸入您的使用者名稱</string>
    <string name="location_hint">請輸入您的所在地</string>
    <string name="company_hint">請輸入您的服務單位</string>
    <string name="intro_hint">請輸入您的簡介</string>
    <string name="avatar_upload_hint">更新大頭貼</string>
    <string name="inbox_title">通知</string>
    <string name="card_title">我的名片</string>
    <string name="setting_title">設定</string>
    <string name="add_contact_tiltle">新增聯絡人</string>
    <string name="customer_name_hint">請輸入聯絡人姓名</string>
    <string name="customer_location_hint">請輸入聯絡人所在地</string>
    <string name="customer_company_hint">請輸入聯絡人的單位名稱</string>
    <string name="customer_phone_hint">請輸入聯絡人台灣手機號碼(09開頭)</string>
    <string name="customer_qrcode_notice">請輸入以下資料，以完成QRCode 建立</string>
    <string name="i_finish_notice">完成</string>
    <string name="add_contact_desc">選擇聯絡人</string>
    <string name="group_name_hint">輸入群組名稱</string>
    <string name="group_name_desc">群組名稱</string>
</resources>