<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:id="@+id/profile_layout_main"
    android:orientation="vertical"
    tools:context="tw.kits.voicein.activity.ProfileActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:gravity="center_horizontal|center_vertical"
        android:background="@drawable/personal_profile_background">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_img_avatar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/ic_user_placeholder"

            app:civ_border_width="0dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:weightSum="1"
        android:id="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/profile_img_avatar">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avatar_upload_hint"
            android:id="@+id/profile_btn_upload"
            android:layout_below="@+id/contact_edit_img_avatar"
            android:layout_centerHorizontal="true"
            android:layout_margin="6dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/profile_et_name"
            android:maxLines="1"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_hint"
            android:drawableLeft="@drawable/ic_account_circle_grey_600_24dp"
            android:drawableStart="@drawable/ic_account_circle_grey_600_24dp"
            android:drawablePadding="6dp"
            />

        <EditText
            android:id="@+id/profile_et_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/location_hint"
            android:drawableLeft="@drawable/ic_location_on_grey_600_24dp"
            android:drawableStart="@drawable/ic_location_on_grey_600_24dp"
            android:drawablePadding="6dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_et_com"
            android:maxLines="1"
            android:inputType="text"
            android:hint = "@string/company_hint"
            android:drawableLeft="@drawable/ic_business_center_grey_600_24dp"
            android:drawableStart="@drawable/ic_business_center_grey_600_24dp"
            android:drawablePadding="6dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/profile_et_intro"
            android:hint="@string/intro_hint"

            android:layout_gravity="center_horizontal"
            android:scrollbars="vertical"
            android:lines="3"
            android:gravity="top"
            android:minLines="3"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:id="@+id/profile_btn_confirm"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>
