<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_lo_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".activity.LoginActivity"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView2"
        android:src="@drawable/ic_voice_icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/login_tv_brandname"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        style="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:layout_marginTop="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_notice"
        android:id="@+id/textView"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        style="@style/Base.TextAppearance.AppCompat.Title.Inverse" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="2dp"
        android:background="#b4ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="+886"
            android:id="@+id/textView3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:id="@+id/login_et_phonenum"
            android:hint="@string/enter_phonenumber_hint"
            android:maxLength="10" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/login_btn_confirm"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Colored" />

</LinearLayout>
