<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/qrcode_create_lo_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tw.kits.voicein.activity.QrcodeCreateActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_qrcode_notice"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/TextAppearance.AppCompat.Title" />
    <Button
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/qrcode_create_btn_read"
        android:text="@string/chose_from_phonebook"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout9"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/qrcode_create_img_user"
            android:src="@drawable/ic_account_circle_grey_600_24dp"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/customer_name_hint"
            android:ems="10"
            android:id="@+id/qrcode_create_et_name" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout11"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/qrcode_create_img_phone"
            android:src="@drawable/ic_phone_primary_36dp"
            android:layout_above="@+id/qrcode_create_img_loc"
            android:layout_toRightOf="@+id/qrcode_create_img_loc"
            android:layout_toEndOf="@+id/qrcode_create_img_loc" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/customer_phone_hint"
            android:ems="10"
            android:id="@+id/qrcode_create_et_phone" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout10"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/imageView"
            android:src="@drawable/ic_business_center_grey_600_24dp"
            android:layout_below="@+id/qrcode_create_img_loc"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/customer_company_hint"
            android:id="@+id/qrcode_create_et_com"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout12"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/qrcode_create_img_loc"
            android:src="@drawable/ic_location_on_grey_600_24dp"
           />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/customer_location_hint"
            android:ems="10"
            android:id="@+id/qrcode_create_et_loc" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_finish_notice"
        android:id="@+id/customer_qrcode_confirm"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_marginTop="8dp" />

</LinearLayout>
